package seedu.forgetfulnus.logic.parser;

import static seedu.forgetfulnus.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
import static seedu.forgetfulnus.commons.core.Messages.MESSAGE_UNKNOWN_COMMAND;

import java.util.regex.Matcher;
import java.util.regex.Pattern;

import seedu.forgetfulnus.logic.commands.AddCommand;
import seedu.forgetfulnus.logic.commands.ClearCommand;
import seedu.forgetfulnus.logic.commands.Command;
import seedu.forgetfulnus.logic.commands.DeleteCommand;
import seedu.forgetfulnus.logic.commands.EditCommand;
import seedu.forgetfulnus.logic.commands.EndQuizCommand;
import seedu.forgetfulnus.logic.commands.ExitCommand;
import seedu.forgetfulnus.logic.commands.FindCommand;
import seedu.forgetfulnus.logic.commands.HelpCommand;
import seedu.forgetfulnus.logic.commands.ListCommand;
import seedu.forgetfulnus.logic.commands.NextCommand;
import seedu.forgetfulnus.logic.commands.QuizCommand;
import seedu.forgetfulnus.logic.commands.RandomQuizCommand;
import seedu.forgetfulnus.logic.commands.ScoreCommand;
import seedu.forgetfulnus.logic.commands.SortCommand;
import seedu.forgetfulnus.logic.commands.TryCommand;
import seedu.forgetfulnus.logic.parser.exceptions.ParseException;

/**
 * Parses user input.
 */
public class GlossaryParser {

    /**
     * Used for initial separation of command word and args.
     */
    private static final Pattern BASIC_COMMAND_FORMAT = Pattern.compile("(?<commandWord>\\S+)(?<arguments>.*)");

    /**
     * Parses user input into command for execution.
     *
     * @param userInput full user input string
     * @return the command based on the user input
     * @throws ParseException if the user input does not conform the expected format
     */
    public Command parseCommand(String userInput) throws ParseException {
        final Matcher matcher = BASIC_COMMAND_FORMAT.matcher(userInput.trim());
        if (!matcher.matches()) {
            throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, HelpCommand.MESSAGE_USAGE));
        }

        final String commandWord = matcher.group("commandWord");
        final String arguments = matcher.group("arguments");
        switch (commandWord) {

        case AddCommand.COMMAND_WORD:
            return new AddCommandParser().parse(arguments);

        case EditCommand.COMMAND_WORD:
            return new EditCommandParser().parse(arguments);

        case DeleteCommand.COMMAND_WORD:
            return new DeleteCommandParser().parse(arguments);

        case ClearCommand.COMMAND_WORD:
            return new ClearCommand();

        case FindCommand.COMMAND_WORD:
            return new FindCommandParser().parse(arguments);

        case ListCommand.COMMAND_WORD:
            return new ListCommand();

        case ExitCommand.COMMAND_WORD:
            return new ExitCommand();

        case HelpCommand.COMMAND_WORD:
            return new HelpCommand();

        case QuizCommand.COMMAND_WORD:
            return new QuizCommand();

        case EndQuizCommand.COMMAND_WORD:
            return new EndQuizCommand();

        case NextCommand.COMMAND_WORD:
            return new NextCommand();

        case SortCommand.COMMAND_WORD:
            return new SortCommandParser().parse(arguments);

        case RandomQuizCommand.COMMAND_WORD:
            return new RandomQuizCommandParser().parse(arguments);

        case TryCommand.COMMAND_WORD:
            return new TryCommand(arguments);

        case ScoreCommand.COMMAND_WORD:
            return new ScoreCommand();

        default:
            throw new ParseException(MESSAGE_UNKNOWN_COMMAND);
        }
    }

}
