@startuml
!include style.puml
show members
show methods
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR_T2

abstract class Command
interface Parser
class SortCommand {
    comp: Comparator<FlashCard>
    +void : execute(model)
}
class SortCommandParser {
    ~SortCommand : parse(String)
}
class ParserUtil {
    +{static} String : parseSortParams()
}
class GlossaryParser {
    +Command : parseCommand(String)
}
interface Model {
    void : setGlossary()
}

GlossaryParser --> "1" SortCommandParser : creates
SortCommand --|> Command
SortCommandParser ..|> Parser
SortCommandParser ..> ParserUtil : uses static method from
SortCommandParser --> "1" SortCommand : creates
SortCommand ..> "1" Model : modifies

@enduml
